syntax = "proto3";

package mashroom.zoopla;

//import "google/protobuf/wrappers.proto";

option go_package = "gitlab.okta-solutions.com/mashroom/backend/zoopla";

message Coordinates {
    double Latitude = 1;
    double Longitude = 2;
}

message PafAddress {
    string AddressKey = 1;
    string OrganisationKey = 2;
    string PostcodeType = 3;
}

message Location {
    string CountryCode = 1;
    string PostalCode = 2;
    string PropertyNumberOrName = 3;
    string StreetName = 4;
    string TownOrCity = 5;
    Coordinates Coordinates = 6;
    //string County = 2;
    // string Locality = 3;
    //   string PafUdprn = 4;
    //  PafAddress PafAddress = 10;
}

message DetailedDescription {
    string Dimensions = 1;
    string Heading = 2;
    string Text = 3;
}

message PricePerUnitArea {
    double Price = 1;
    string Units = 2;
}

message Pricing {
    enum TransactionType {
        rent = 0;
        sale = 1;
    }
    TransactionType transactionType = 1;
    string CurrencyCode = 2;
    double Price = 3;
    enum RentFrequency {
        per_person_per_week = 0;
        per_week = 1;
        per_month = 2;
        per_quarter = 3;
        per_year = 4;
    }
    RentFrequency rentFrequency = 4;

    // bool Auction = 7;
    // PricePerUnitArea PricePerUnitArea = 6;
    // string PriceQualifier = 5;
    //string TransactionType = 7;
}


message BranchUpdateRequest {
}

message BranchUpdateResponse {
    string status = 1;
    string branchReference = 2;
    bool newBranch = 3;
}

message ListingUpdateRequest {
    string BranchReference = 1;
    string Category = 2;
    repeated DetailedDescription DetailedDescription = 3;
    string LifeCycleStatus = 4;
    string ListingReference = 5;
    Location Location = 6;
    Pricing Pricing = 7;
    string PropertyType = 8;

    //    Areas Areas = 9;
    //    repeated string BillsIncluded = 11;
    //    string FurnishedState = 10;
    //    string AvailableFromDate = 12;
    //    int32 Bathrooms = 13;
    //    string DisplayAddress = 14;
    //    string RentalTerm = 15;
    //    int32 TotalBedrooms = 16;
}

message ListingUpdateResponse {
    string status = 1;
    string listingReference = 2;
    string etag = 3;
    string url = 4;
    bool newListing = 5;
}

message ListingDeleteRequest {
    string listingReference = 1;
}

message ListingDeleteResponse {
    string status = 1;
    string listingReference = 2;
}

message ListingListRequest {
    string branchReference = 1;
}

message Listing {
    string ListingReference = 1;
    string ListingEtag = 2;
    string URL = 3;
}

message ListingListResponse {
    string status = 1;
    string branchReference = 2;
    repeated Listing listings = 3;
}

service ZooplaService {
    rpc BranchUpdate (BranchUpdateRequest) returns (BranchUpdateResponse);
    rpc UpdateProperty (ListingUpdateRequest) returns (ListingUpdateResponse);
    rpc DeleteProperty (ListingDeleteRequest) returns (ListingDeleteResponse);
    rpc Listing (ListingListRequest) returns (ListingListResponse);


}
